kubernetes/v1.12+/memcached.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip-memcached
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zulip
      app.kubernetes.io/component: memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zulip
        app.kubernetes.io/component: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:alpine
        command:
          - 'sh'
          - '-euc'
          - |
            echo 'mech_list: plain' > "$$SASL_CONF_PATH"
            echo "zulip@$$HOSTNAME:$$MEMCACHED_PASSWORD" > "$$MEMCACHED_SASL_PWDB"
            exec memcached -S
        resources:
          limits:
            cpu: 75m
            memory: 768Mi
        ports:
        - name: memcached
          containerPort: 11211
          protocol: TCP
