kubernetes/v1.12+/redis.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip-redis
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zulip
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zulip
        app.kubernetes.io/component: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        command:
          - 'sh'
          - '-euc'
          - |
            echo "requirepass '$$REDIS_PASSWORD'" > /etc/redis.conf
            exec redis-server /etc/redis.conf
        resources:
          limits:
            cpu: 1
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        volumeMounts:
          - name: redis-persistent-storage
            mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: zulip-redis-data
