kubernetes/v1.12+/postgres.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zulip-postgresql
  namespace: zulip
  labels:
    app.kubernetes.io/name: zulip
    app.kubernetes.io/component: postgresql
spec:
  selector:
    app.kubernetes.io/name: zulip
    app.kubernetes.io/component: postgresql
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
    protocol: TCP
