kubernetes/v1.12+/rabbitmq.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zulip-rabbitmq
  namespace: zulip
  labels:
    app.kubernetes.io/name: zulip
    app.kubernetes.io/component: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: zulip
    app.kubernetes.io/component: rabbitmq
  ports:
  - name: rabbitmq
    port: 5672
    targetPort: 5672
    protocol: TCP
